--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -5,9 +5,13 @@
         "REACT_APP_BEARER_TOKEN": "D03BA43F-121B-438C-9953-3BE9AFB2BB73"
     },
     "qa": {
-        "REACT_APP_BASE_URL": "http://baltfusdr01v/SummerDirectoryAPI/api//Directory/"
+        "REACT_APP_BASE_URL": "http://baltfusdr01v/SummerDirectoryAPI/api//Directory/",
+        "REACT_APP_FACEBOOK_ID":"FACEBOOK018",
+        "REACT_APP_BEARER_TOKEN": "D03BA43F-121B-438C-9953-3BE9AFB2BB73"
     },
     "prod": {
-        "REACT_APP_BASE_URL": "http://baltfusdr01v/SummerDirectoryAPI/api//Directory/"
+        "REACT_APP_BASE_URL": "http://baltfusdr01v/SummerDirectoryAPI/api//Directory/",
+        "REACT_APP_FACEBOOK_ID":"FACEBOOK018",
+        "REACT_APP_BEARER_TOKEN": "D03BA43F-121B-438C-9953-3BE9AFB2BB73"
     }
 }
