Added azuredev build option to env-cmdrc

--- a/.env-cmdrc
+++ b/.env-cmdrc
@@ -13,5 +13,10 @@
         "REACT_APP_BASE_URL": "http://baltfusdr01v/SummerDirectoryAPI/api//Directory/",
         "REACT_APP_FACEBOOK_ID":"FACEBOOK018",
         "REACT_APP_BEARER_TOKEN": "D03BA43F-121B-438C-9953-3BE9AFB2BB73"
-    }
+    },
+    "azuredev": {
+        "REACT_APP_BASE_URL": "https://summerdirectoryapidev.azurewebsites.net/api/Directory/",
+        "REACT_APP_FACEBOOK_ID":"COSMOSTEST001",
+        "REACT_APP_BEARER_TOKEN": "D03BA43F-121B-438C-9953-3BE9AFB2BB73"
+    }    
 }
