--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "scripts": {
     "start-dev": "env-cmd dev react-scripts start",
     "build-dev": "env-cmd dev react-scripts build",
+    "start-azuredev": "env-cmd azuredev react-scripts start",
+    "build-azuredev": "env-cmd azuredev react-scripts build",
     "start-qa": "env-cmd qa react-scripts start",
     "build-qa": "env-cmd qa react-scripts build",
     "start-prod": "env-cmd prod react-scripts start",
